# deploypyfiles

./: deploypyfiles.py  license  pyproject.toml  readme.md
