[project]
name = "deploypyfiles"
version = "0.0.2"
dependencies = []
requires-python = ">=3.14"
authors = [
  {name = "Uladzislau Khamkou", email = "kham@tuta.io"},
]
maintainers = [
  {name = "Uladzislau Khamkou", email = "kham@tuta.io"},
]
description = "Copy Python scripts from working directory to specified locations"
readme = "readme.md"
license = "MIT"
license-files = ["license"]
keywords = ["deploy", "tool"]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Utilities",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/hvox/deploypyfiles/blob/main/readme.md"
# Documentation = "https://readthedocs.org"
Repository = "https://github.com/hvox/deploypyfiles"
"Bug Tracker" = "https://github.com/hvox/deploypyfiles/issues"
# Changelog = "https://github.com/hvox/deploypyfiles/blob/main/changelog.md"

[project.scripts]
deploypyfiles = "deploypyfiles:main"

[tool.deploypyfiles]
deployables = ['deploypyfiles.py']
